--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@clerk/nextjs": "^5.4.1",
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-toast": "^1.2.1",
     "@reduxjs/toolkit": "^2.2.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
@@ -19,6 +20,7 @@
     "next": "14.2.7",
     "react": "^18",
     "react-dom": "^18",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^5.3.0",
     "react-redux": "^9.1.2",
     "shadcn-ui": "^0.9.0",
