without errors in tsconfig.json and use client from async await functions

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,7 @@
     "incremental": true,
     "baseUrl": ".",                 // Basisverzeichnis
     "paths": {
-      "@/*": ["./src/*"]            // Alias für src-Ordner
+      "@/*": ["./*"]            // Alias für src-Ordner
     },
     "plugins": [
       {
