--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@clerk/clerk-react": "^5.21.0",
     "@clerk/nextjs": "^5.4.1",
     "@paypal/react-paypal-js": "^8.6.0",
     "@radix-ui/react-dialog": "^1.1.1",
@@ -18,7 +19,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "lucide-react": "^0.437.0",
-    "next": "14.2.7",
+    "next": "^15.1.2",
     "react": "^18",
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
